[package]
name = "leads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
dateparser = "0.1.8"

